tests/golden/type_errors/function_type_initializer_return_mismatch.cd
let f: fun(number): number = fun (x: number): string {
  return "no";
};
