tests/golden/type_errors/function_type_initializer_return_mismatch.err
Type error at 1:47: function `<lambda>` expects return number, got string
  let f: fun(number): number = fun (x: number): string {
                                                ^
